animeultima dark mode fix

--- a/src/pages/animeultima/style.less
+++ b/src/pages/animeultima/style.less
@@ -1,8 +1,17 @@
 @import "./../pages";
 
-#malp{
-  select option{
-    color:black !important;
+html #malp {
+  select option {
+    color: black !important;
     background-color: white !important;
+  }
+}
+html.dark {
+  #malp select,a,input,span {
+    color: #ccc !important;
+  }
+  #malp select option {
+    color: #ccc !important;
+    background-color: #111 !important;
   }
 }
